--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.2.1",
     "@types/react": "17.0.13",
     "autoprefixer": "^10.2.6",
     "eslint": "7.30.0",
