added stylelint to support tailwindcss linting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
-    "editor.tabSize": 2,
-    "editor.detectIndentation": false
+  "editor.tabSize": 2,
+  "editor.detectIndentation": false,
+  "css.validate": false, // Disable css built-in lint
+  "stylelint.enable": true, // Enable sytlelint
+  "scss.validate": false // Disable scss lint (optional if using scss)
 }
