--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
     "postcss": "^8.3.5",
+    "stylelint": "^13.13.1",
+    "stylelint-config-recommended": "^5.0.0",
     "tailwindcss": "^2.2.4",
     "typescript": "4.3.5"
   }
