top bar starting to look like something

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "editor.detectIndentation": false,
   "css.validate": false, // Disable css built-in lint
   "stylelint.enable": true, // Enable sytlelint
-  "scss.validate": false // Disable scss lint (optional if using scss)
+  "scss.validate": false,
+  "cSpell.words": ["semibold"] // Disable scss lint (optional if using scss)
 }
