--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.3.0",
+    "@heroicons/react": "^1.0.2",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/react": "17.0.13",
     "autoprefixer": "^10.2.6",
