--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
     "@tailwindcss/line-clamp": "^0.2.1",
